Change colour of provider navbar to address accesibility colour contrast issue

--- a/src/das/sass/components/header/_header.scss
+++ b/src/das/sass/components/header/_header.scss
@@ -27,7 +27,6 @@
 }
 
 .das-header--provider-legacy {
-  border-bottom: 10px solid #6f777b;
   .govuk-header__logo {
     display: none;
   }
