--- a/src/das/sass/settings/_colours.scss
+++ b/src/das/sass/settings/_colours.scss
@@ -1,5 +1,5 @@
 $employer: darken(govuk-colour("light-purple"), 5%);
-$provider: govuk-colour("orange");
+$provider: govuk-colour("green");
 
 $status-success: govuk-colour("turquoise");
 $status-warning: govuk-colour("orange");
